# django-startup

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
accommodation/: admin.py  models.py
accommodation/migrations/: 0001_initial.py
accommodation/models/: __init__.py  accommodation.py  availability.py
app/: settings.py
common/: models.py
common/models/: __init__.py  base.py
destinations/: admin.py  models.py
destinations/management/commands/: seed_travel_data.py
destinations/migrations/: 0001_initial.py  0002_alter_citypair_unique_together_and_more.py
destinations/models/: __init__.py  city.py  city_pair.py
destinations/services/: __init__.py  generator.py
transport/: admin.py  models.py
transport/migrations/: 0001_initial.py  0002_traveloption_and_more.py
transport/models/: __init__.py  base.py  operator.py  route.py  schedule.py
trips/: admin.py  models.py
trips/migrations/: 0001_initial.py
trips/models/: __init__.py  itinerary.py  search.py  segment.py
