[project]
name = "django-startup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-tailwind>=4.4.2",
    "django-unfold>=0.79.0",
    "ruff>=0.15.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "django-stubs>=5.2.9",
]
